kubernetes/ghost.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: testing
  labels:
    env: test
    jobLabel: ghost
    app.kubernetes.io/name: ghost
    app.kubernetes.io/managed-by: terraform
    app.kubernetes.io/owner: devops
    version: blue

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: testing
  labels:
    jobLabel: ghost
    app.kubernetes.io/name: ghost
    app.kubernetes.io/managed-by: terraform
    app.kubernetes.io/owner: devops
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      jobLabel: ghost
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        jobLabel: ghost
        app.kubernetes.io/name: ghost
        app.kubernetes.io/managed-by: terraform
        app.kubernetes.io/owner: devops
        version: blue
    spec:
      containers:
        - name: ghost
          image: ghost:6.10.3
          ports:
            - containerPort: 2368

---
apiVersion: v1
kind: Service
metadata:
  name: ghost-svc
  namespace: testing
  labels:
    app.kubernetes.io/name: ghost
    app.kubernetes.io/managed-by: terraform
    app.kubernetes.io/owner: devops
    jobLabel: ghost
    version: blue
spec:
  selector:
    app.kubernetes.io/name: ghost
    version: blue
  ports:
    - name: ghost
      port: 80
      targetPort: 2368

---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
  labels:
    jobLabel: ghost
    app.kubernetes.io/name: ghost
    app.kubernetes.io/managed-by: terraform
    app.kubernetes.io/owner: devops
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  description: babys first gatewayclass

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: testing
  labels:
    jobLabel: ghost
    app.kubernetes.io/name: ghost
    app.kubernetes.io/managed-by: terraform
    app.kubernetes.io/owner: devops
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ghost-backend
  namespace: testing
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "ghost.pafable.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: ghost-backend
          port: 2368
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
